--- a/vmware/create_vm.yml
+++ b/vmware/create_vm.yml
@@ -7,7 +7,7 @@
         file: vars.yml
 
     - name: Get current VM facts
-      community.vmware.vmware_guest_facts:
+      community.vmware.vmware_guest_info:
         validate_certs: false
         hostname: "{{ vcenter_hostname }}"
         username: "{{ vcenter_username }}"
