--- a/vmware/create_vm.yml
+++ b/vmware/create_vm.yml
@@ -26,7 +26,7 @@
             state: present
             type: iso
             iso_path: "{{ datastore1_rhel_9_3_iso_path }}"
-        # networks:
-        #  - name: "{{ vm_network_name }}"
-        #    device_type: "vmxnet3"
-        #    type: "dhcp"
+        networks:
+          - name: "{{ vm_network_name }}"
+            device_type: "vmxnet3"
+            type: "dhcp"
