--- a/vmware/create_vm.yml
+++ b/vmware/create_vm.yml
@@ -6,7 +6,7 @@
       ansible.builtin.include_vars:
         file: vars.yml
 
-    - name: "Test setup: Create VM guest {{ vm }}"
+    - name: "Test setup: Create VM guest {{ vm_name }}"
       community.vmware.vmware_guest:
         validate_certs: false
         hostname: "{{ vcenter_hostname }}"
@@ -16,7 +16,7 @@
         datacenter: "{{ vm_datacenter }}"
         folder: "{{ vm_folder }}"
         state: present
-        name: "{{ vm }}"
+        name: "{{ vm_name }}"
         disk: "{{ vm_disk }}"
         guest_id: "{{ vm_guest_id }}"
         hardware: "{{ vm_hardware }}"
