--- a/vmware/from_template.yml
+++ b/vmware/from_template.yml
@@ -34,3 +34,17 @@
         datacenter: "{{ vm_datacenter }}"
         name: "{{ vm_name }}"
         state: powered-on
+
+    - name: "Get VM details"
+      community.vmware.vmware_vm_info:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        validate_certs: false
+        datacenter: "{{ vm_datacenter }}"
+        name: "{{ vm_name }}"
+      register: vm_facts
+
+    - name: "Display VM IP Address"
+      debug:
+        msg: "The IP address of the VM is {{ vm_facts.virtual_machines[0].guest.ip_address }}"
