--- a/vmware/from_template.yml
+++ b/vmware/from_template.yml
@@ -43,6 +43,10 @@
         validate_certs: false
       register: vm_facts
 
+    - name: "Display facts"
+      debug:
+        msg: "{{ vm_facts }}"
+
     - name: "Display VM IP Address"
       debug:
-        msg: "The IP address of the VM is {{ vm_facts.virtual_machines[0].ip_address }}"
+        msg: "The IP address of the VM is {{ vm_info.virtual_machines[0].vm_network[vm_info.virtual_machines[0].mac_address[0]]['ipv4'][0] }}"
