--- a/vmware/from_template.yml
+++ b/vmware/from_template.yml
@@ -50,3 +50,12 @@
     - name: "Display VM IP Address"
       debug:
         msg: "The IP address of the VM is {{ vm_facts.virtual_machines[0].esxi_hostname }}"
+
+    - name: "Set VM IP Address as fact"
+      set_fact:
+        vm_ip: "{{ vm_facts.virtual_machines[0].esxi_hostname }"
+
+    - name: "Ping the new VM"
+      ansible.builtin.ping:
+      delegate_to: "{{ vm_ip }}"
+      hosts: "{{ vm_ip }}"
