--- a/vmware/from_template.yml
+++ b/vmware/from_template.yml
@@ -59,6 +59,8 @@
       ansible.builtin.add_host:
         name: "{{ vm_ip }}"
         groups: new_vms
+        ansible_user: "{{ username }}"
+        ansible_ssh_pass: "{{ password }}"
 
 - hosts: new_vms
   tasks:
