--- a/vmware/from_template.yml
+++ b/vmware/from_template.yml
@@ -47,13 +47,13 @@
       debug:
         msg: "{{ vm_facts }}"
 
-    - name: "Display VM IP Address"
-      debug:
-        msg: "The IP address of the VM is {{ (vm_facts.virtual_machines | selectattr('guest_name', 'equalto', 'metrics-utility-vm') | first).ip_address }}"
-
     - name: "Set VM IP Address as fact"
       set_fact:
-        vm_ip: "{{ (vm_facts.virtual_machines | selectattr('guest_name', 'equalto', 'metrics-utility-vm') | first).ip_address }}"
+        vm_ip: "{{ (vm_facts.virtual_machines | selectattr('guest_name', 'equalto', vm_name) | first).ip_address }}"
+
+    - name: "Display VM IP Address"
+      debug:
+        msg: "The IP address of the VM is {{ vm_ip }}"
 
     - name: "Add VM to the inventory"
       ansible.builtin.add_host:
