--- a/vmware/from_template.yml
+++ b/vmware/from_template.yml
@@ -4,10 +4,16 @@
     scan_use_checksum: false
     scan_use_recursive: false
   tasks:
+    - name: Install or update pip
+      community.general.easy_install:
+        name: pip
+        state: latest
+      become: yes
+
     - name: Install bottle python package
       ansible.builtin.pip:
         name: ansible
-        
+
     - name: "Get VM details"
       community.vmware.vmware_vm_info:
         hostname: "{{ vcenter_hostname }}"
