--- a/vmware/from_template.yml
+++ b/vmware/from_template.yml
@@ -8,6 +8,7 @@
     - name: Install bottle python package
       ansible.builtin.pip:
         name: ansible
+        name: pyvmomi
 
     - name: Import common vars
       ansible.builtin.include_vars:
