--- a/vmware/from_template.yml
+++ b/vmware/from_template.yml
@@ -22,16 +22,11 @@
         validate_certs: false
       register: vm_facts
 
-    - name: "Set VM IP Address as fact"
-      set_fact:
-        vm_ip: "{{ (vm_facts.virtual_machines | selectattr('guest_name', 'equalto', vm_name) | first).ip_address }}"
+    # - name: "Set VM IP Address as fact"
+    #   set_fact:
+    #     vm_ip: "{{ (vm_facts.virtual_machines | selectattr('guest_name', 'equalto', vm_name) | first).ip_address }}"
 
-    - name: "Display VM IP Address"
-      debug:
-        msg: "The IP address of the VM is {{ vm_ip }}"
+    # - name: "Display VM IP Address"
+    #   debug:
+    #     msg: "The IP address of the VM is {{ vm_ip }}"
 
-
-- hosts: new_vms
-  tasks:
-    - name: "Ping the new VM"
-      ansible.builtin.ping:
